css/main.css
/*********** Global Elements ***********/


* {
  box-sizing: border-box;
}

h2 {
  text-align: center;
  font-size: 2em;
  padding: 0;
  margin: 0;
}

a:visited, a:link {
  color: inherit;
  text-decoration: none;
}

/********** Body sections **********/

body {
  font-family: 'Comfortaa', cursive;
  margin: 0;
}

.main-section {
  height: 300px;
  clear: both;
  margin: 5px 0;
  padding: 50px 0;
  background-repeat: repeat;
  background-size: cover;
}

/********** Header Section **********/

.navbar {
  height: 100px;
  text-align: center;
  padding: 15px 0;
  /* background: #7C9FFF; */
}

.left-block {
  float: left;
  width: 25%;
  height: 100%;
}

.wide-center-block {
  float: left;
  width: 45%;
  height: 100%;
}

.right-block {
  float: left;
  width: 25%;
  padding: 0 0;
  height: 100%;
}

.left-block h1 {
  font-family: 'Mr Dafoe', cursive;
  font-size: 4em;
  display: inline;
  padding-left: 15px;
}

nav ul {
  padding: 15px 0;
}

nav li, nav a{
  display: inline;
  text-decoration: none;
  padding: 0 15px;
}

#cta {
    margin: 10px 0;
    padding: 16px 0px;
    width: 320px;
    color: #fff;
    background: #000;
    border: none;
    display: block;
    text-decoration: none;
}

#cta:hover {
  background: #555;
  color: #95A1C0;
  font-weight: bold;
}

/********** About Me **********/

#about-me {
  background-color: #95A1C0;
}

#about-me h2 {
  text-align: left;
}

#headshot {
  border-radius: 5%;
  margin-left: 60px;
  margin-top: 30px;
  height: 150px;
}

.two-thirds-block {
  float: left;
  width: 70%;
  margin-left: 15px;
}

/********** Skills **********/

#skills {
  color: #585F72;
}

.half-width {
  float: left;
  width: 49%;
  margin: 0;
  text-align: center;
}

.skills ul, h3, li{
  padding: 2px;
  text-decoration: none;
  line-height: 25px;
  list-style: none;
}

/********** Projects **********/

#projects {
  text-align: center;
  background-color: #95A1C0;
}

.example-project {
  float: left;
  width: 32%;
}

/********** Footer **********/

#footer {
  height: 300px;
  text-align: center;
}

#footer li {
  list-style: none;
  padding: 0;
  font-size: 1.2em;
  line-height: 1.5em;
}

.footer-section ul, .footer-section a {
  padding: 0;
  text-decoration: none;
  font-size: 1.2em;
}

#big-button {
  width: 500px;
  margin-top: 10px;
  color: #fff;
  background: #000;
  border: none;
  display: inline-block;
  padding: 10px 0;

}

#big-button:hover {
  background: #555;
  color: #95A1C0;
  font-weight: bold;
}

